# serde-reflection

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  tsconfig.json
.github/workflows/: main.yml
js-benchmarks/: .gitignore  flake.nix  package.json  pnpm-lock.yaml  readme.md
js-benchmarks/schema-proto/: bench.proto
js-benchmarks/serdegen-bincode/: Cargo.toml
js-benchmarks/serdegen-bincode/src/: main.rs
js-benchmarks/src/: index.ts
js-benchmarks/src/bincode/registry/: registry.ts
js-benchmarks/src/proto/: bench.ts
serde-generate/: Cargo.toml  README.md  README.tpl
serde-generate-bin/: Cargo.toml  README.md
serde-generate-bin/src/: main.rs
serde-generate-bin/tests/: cli.rs
serde-generate/runtime/cpp/: bcs.hpp  bincode.hpp  serde.hpp
serde-generate/runtime/csharp/Serde.Tests/: Serde.Tests.csproj
serde-generate/runtime/dart/: pubspec.yaml
serde-generate/runtime/dart/bcs/: bcs_deserializer.dart  bcs_serializer.dart
serde-generate/runtime/dart/bincode/: bincode_deserializer.dart  bincode_serializer.dart
serde-generate/runtime/dart/serde/: binary_deserializer.dart  binary_serializer.dart  bytes.dart  int_128.dart  uint_128.dart  uint_64.dart
serde-generate/runtime/dart/test/: bincode_test.dart  serde_test.dart
serde-generate/runtime/golang/: go.mod
serde-generate/runtime/golang/bcs/: bcs_test.go  deserializer.go  serializer.go
serde-generate/runtime/golang/bincode/: deserializer.go  serializer.go
serde-generate/runtime/kotlin/com/novi/bcs/: BcsDeserializer.kt  BcsSerializer.kt  BcsTest.kt
serde-generate/runtime/kotlin/com/novi/bincode/: BincodeDeserializer.kt  BincodeSerializer.kt
serde-generate/runtime/kotlin/com/novi/serde/: BinaryDeserializer.kt  BinarySerializer.kt  Bytes.kt  DeserializationError.kt  Deserializer.kt  Int128.kt  SerdeByteArrayOutput.kt  SerializationError.kt  Serializer.kt  Slice.kt  Tuple2.kt  Tuple3.kt  Tuple4.kt  Tuple5.kt  Tuple6.kt  UInt128.kt
serde-generate/runtime/ocaml/: dune
serde-generate/runtime/ocaml/bcs/: deserialize.ml  dune  runtime.ml  serialize.ml  test_bcs.ml
serde-generate/runtime/ocaml/bincode/: deserialize.ml  dune  serialize.ml  test_bincode.ml
serde-generate/runtime/ocaml/common/: deserialize.ml  dune  map.ml  misc.ml  serde.ml  serialize.ml
serde-generate/runtime/ocaml/ppx/: dune  ppx.ml
serde-generate/runtime/ocaml/serde/: deserialize.ml  dune  serialize.ml
serde-generate/runtime/ocaml/test/: dune  test_bcs.ml  test_bincode.ml
serde-generate/runtime/ocaml/virtual/: deserialize.mli  dune  serialize.mli
serde-generate/runtime/python/bcs/: test_bcs.py
serde-generate/runtime/python/serde_binary/: __init__.py
serde-generate/runtime/typescript/: bincode.ts  serde.ts
serde-generate/runtime/typescript/bcs/: bcsDeserializer.ts  bcsSerializer.ts
serde-generate/src/: analyzer.rs  common.rs  config.rs  cpp.rs  csharp.rs  dart.rs  generate.rs  golang.rs  java.rs  kotlin.rs  lib.rs  ocaml.rs  python3.rs  rust.rs  solidity.rs  swift.rs  test_utils.rs  typescript.rs
serde-generate/tests/: analyzer.rs  cli.rs  cpp_generation.rs  cpp_runtime.rs  csharp_generation.rs  csharp_runtime.rs  dart_generation.rs  dart_runtime.rs  golang_generation.rs  golang_runtime.rs  java_generation.rs  java_runtime.rs  kotlin_generation.rs  kotlin_runtime.rs  lib.rs  ocaml_generation.rs  ocaml_runtime.rs  python_generation.rs  python_runtime.rs  rust_generation.rs  rust_runtime.rs  solidity_generation.rs  solidity_runtime.rs  swift_generation.rs  swift_runtime.rs  test_utils.rs  typescript_generation.rs  typescript_runtime.rs
serde-name/: Cargo.toml  README.md  README.tpl
serde-name/tests/: trace.rs
serde-reflection/: Cargo.toml  README.md  README.tpl
serde-reflection/src/: de.rs  error.rs  format.rs  json_converter.rs  lib.rs  ser.rs  trace.rs  value.rs
serde-reflection/tests/: format.rs  json_converter.rs  serde.rs
suite/typescript/: .gitignore  Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
suite/typescript/rs/: generator.rs
suite/typescript/schema-proto/: main.proto
suite/typescript/ts/: bench.ts  data.ts  test.ts
suite/typescript/ts/bincode/: bincode.ts  registry.ts  serde.ts
suite/typescript/ts/proto/: main.ts
