[package]
name = "serde-generate-bin"
version = "0.8.0"
description = "Tool to generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/zefchain/serde-reflection"
authors = ["Mathieu Baudet <mathieu.baudet@zefchain.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.60"

[dependencies]
serde-generate = { path = "../serde-generate", version = "0.32.0" }
structopt = "0.3.21"
serde-reflection = { path = "../serde-reflection", version = "0.5.0" }
serde_yaml = "0.8.17"

[dev-dependencies]
tempfile = "3.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"

[[bin]]
name = "serdegen"
path = "src/main.rs"
test = false
