[package]
name = "serde-generate-bin"
version = "0.9.0"
description = "Tool to generate (de)serialization code in multiple languages"
documentation = "https://docs.rs/serde-generate"
repository = "https://github.com/zefchain/serde-reflection"
authors = ["Mathieu Baudet <mathieu.baudet@zefchain.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.70"

[dependencies]
serde-generate = { path = "../serde-generate", version = "0.33.0", default-features = false }
structopt = "0.3.21"
serde-reflection = { path = "../serde-reflection", version = "0.5.2" }
serde_yaml = "0.8.17"

[dev-dependencies]
tempfile = "3.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"

[features]
default = ["cpp", "csharp", "dart", "golang", "java", "kotlin", "ocaml", "python3", "rust", "swift", "typescript", "solidity"]
cpp = ["serde-generate/cpp"]
csharp = ["serde-generate/csharp"]
dart = ["serde-generate/dart"]
golang = ["serde-generate/golang"]
java = ["serde-generate/java"]
kotlin = ["serde-generate/kotlin"]
ocaml = ["serde-generate/ocaml"]
python3 = ["serde-generate/python3"]
rust = ["serde-generate/rust"]
solidity = ["serde-generate/solidity"]
swift = ["serde-generate/swift"]
typescript = ["serde-generate/typescript"]

[[bin]]
name = "serdegen"
path = "src/main.rs"
test = false
