[package]
name = "serde-reflection"
version = "0.5.0"
description = "Extract representations of Serde data formats"
documentation = "https://docs.rs/serde-reflection"
repository = "https://github.com/zefchain/serde-reflection"
authors = ["Mathieu Baudet <mathieu.baudet@zefchain.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["data-structures", "serialization", "serde"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.60"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[dependencies]
erased-discriminant = "1"
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
typeid = "1"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde_bytes = "0.11.5"
